--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-hello , hola , konichiwhhhhhhhhhhahow are you , I'm fine . Thank you. alooooooooooo
-1223213 hi, im ares Hello spam push -u origin master. testingggggg 1234
+hello , hola , how are you , I'm fine . Thank you. alooooooooooo
+1223213 llo spam push -u origin master. testingggggg 1234
 ngon lanh 
